@@ -9,6 +9,8 @@ Version 0.3y
 ------------
 * Fixed a bug in Zebra shaman encounter.
 * Terry's pet option now has a back button.
+* Terry now has a lick pussy sex option (should help out with that soft lock problem) written by LD & QB.
+
 
 --------------------------------------------
              PREVIOUS VERSIONS
